# seq-structure-convergence

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
paper/: PROJECT_PLAN.md  literature.md
scripts/: 01_fetch_proteins.py  01b_fetch_annotations.py  01c_residue_targets.py  02_extract_embeddings_esm.py  02_extract_embeddings_struct.py  03_analyze_embeddings.py  04_convergence.py  04b_supervised_convergence.py  05_property_prediction.py  06_significance.py  qc_common.py
